k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: microservices.info
      http:
        paths:
          - path: /user
            backend:
              serviceName: user
              servicePort: 8080
          - path: /product
            backend:
              serviceName: product
              servicePort: 8080
